--- a/zara's style.css
+++ b/zara's style.css
@@ -186,6 +186,7 @@
 		animation: spin 1s linear infinite;
   		animation-play-state: paused;
   		animation-delay: calc(var(--scroll) * -1s);
+		width:200px;
 	}
 		@keyframes spin 
 		{
@@ -249,13 +250,13 @@
 	  transform-origin: bottom left;
 	}
 		
-	.text a {
+	p a {
 		display: inline-block;
 		position: relative;
 		text-decoration: none;
 		color: var(--pink);
 	}
-	.text a::after {
+	p a::after {
 	  content: '';
 	  position: absolute;
 	  width: 100%;
@@ -268,7 +269,7 @@
 	  transition: transform 0.25s ease-out;
 	}
 
-	.text a:hover::after {
+	p a:hover::after {
 	  transform: scaleX(1);
 	  transform-origin: bottom left;
 	}
@@ -290,10 +291,10 @@
 		h2 {
 			font-size: 4vw;
 		}
-		h3 { .text {
-			margin-left: -6vw;
-			margin-right: -5vw;
-		}}
+		/* h3 { p { */
+			/* margin-left: -6vw; */
+			/* margin-right: -5vw; */
+		/* }} */
 		h4, h5 {
 			font-size: 3vw;
 		}
@@ -351,8 +352,12 @@
 		}
 		.ribbon {
 			height: 5vw;
+			margin-bottom: 2vw;
 		}
 		.poster {
 			filter: saturate(1);
+		}
+		.spin {
+			width: 1vw;
 		}
 	}
